########################
Nagios Core 4 Change Log
########################

4.5.0 - ??????????
------------------
ENHANCEMENTS

FIXES


4.4.2 - ??????????
------------------
FIXES
* Fix comment data being duplicated after a `service nagios reload` or similar (Bryan Heden)
* Fix check_interval and retry_interval not changing at the appropriate times (Scott Wilkerson)
* Fixed passive checks sending recovery email when host was previously UP (Scott Wilkerson)
* Fixed flapping comments duplication on nagios reload (Christian Jung)
* Fix for CVE-2018-13441 null pointer dereference (Trevor McDonald)
* Fixed syntax error in file: default-init.in (#558) (Christian Zettel)


4.4.1 - 2018-06-25
------------------
FIXES
* Revert some macro->kvvec changes causing problems when `enable_environment_macros` was enabled (Bryan Heden)
* Adjust `process_macro_r` function logic so that it handles macros properly (Bryan Heden)
* Fix spec file for systemd (Karsten Weiss, Fr3dY, Bryan Heden)
* Fix bug where `ssize_t` typedef to int on some systems (Bryan Heden)


4.4.0 - 2018-06-19
------------------
ENHANCEMENTS
* new status for check dependencies (John Frickson)
* Allow more flexible requirements for comments (John Frickson)
* Add a `statusCRITICALACK` class for the status column (John Frickson)
* CSV output based on groups (all options) (John Frickson)
* New Macro(s) to generate URL for host / service object to be used in notifications (John Frickson)
* New Macro(s) to determine if host/service notifications are enabled (#419) (Bryan Heden)
* New Macro(s) for obtaining the host/service notification periods (#350) (Bryan Heden)
* enable_page_tour interface option (Bryan Heden)
* Code cleanups in important sections (Workers, Handling Results) (Bryan Heden)
* Automatic mail program detection (with same /bin/mail failback) (Bryan Heden)
* Incorporated [autoconf-macros](https://github.com/NagiosEnterprises/autoconf-macros) into Core (Bryan Heden)