@@ -341,6 +341,7 @@ wrong, please let me know.
 * William Leibzon
 * William Preston
 * Wolfgang Barth
+* Xavier Bachelot
 * xoubih
 * Yves Rubin
 * Zakhar Kleyman
