@@ -1,0 +1,12 @@
+<!-- Here you can customize the sidebar to display quicklinks -->
+<!-- This file will be included in html/side.php -->
+<!--
+	<div class="navsectiontitle">Quicklinks</div>
+	<div class="navsectionlinks">
+		<ul class="navsectionlinks">
+			<li><a href=https://host.example.com/file.html target="<?php echo $link_target;?>">Some external link</a></li>
+			<li><a href="<?php echo $cfg["cgi_base_url"];?>/status.cgi?hostgroup=some_host_group&style=detail&limit=0" target="<?php echo $link_target;?>">Some hostgroup</a></li>
+			<li><a href="<?php echo $cfg["cgi_base_url"];?>/custom.cgi" target="<?php echo $link_target;?>">Some custom CGI</a></li>
+		</ul>
+	</div>
+-->
